# bm

./: CMakeLists.txt  LICENSE  README.md
src/: bin.hh  main.cpp
test/: test.cc
